--- a/index.html
+++ b/index.html
@@ -1,16 +1,16 @@
-<!DOCTYPE html>
+op<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Scribd Downloader Free</title>
+    <title>Seadrop Downloader</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="container">
-        <h1>SCRIBD.COM DOWNLOADER - Scribd Downloader Free</h1>
-        <input type="text" id="scribdUrl" placeholder="Please input scribd URL here, eg: https://www.scribd.com/doc/xxxxx">
-        <button onclick="downloadFile()">Get Download Now</button>
+        <h1>Thuvien.seadrop Downloader</h1>
+        <input type="text" id="scribdUrl" placeholder="Please input URL here, eg: https://thuvien.seadrop.info/#explorer&sidf=XXXX">
+        <button onclick="downloadFile()">Download</button>
         <p id="status"></p>
     </div>
     <script src="script.js"></script>
