--- a/index.html
+++ b/index.html
@@ -14,5 +14,12 @@
         <p id="status"></p>
     </div>
     <script src="script.js"></script>
+    <button id="toggleGuide">📖 Hướng dẫn sử dụng</button>
+<div id="guideContent" style="display: none;">
+    <p>🔹 Nhập URL có dạng: <br><b>thuvien.seadrop.info/#explorer&sidf=XXXX</b></p>
+    <p>🔹 Nhấn "Download" để tải file.</p>
+    <p>🔹 Nếu URL không hợp lệ, sẽ có thông báo lỗi.</p>
+</div>
+
 </body>
 </html>
