--- a/index.html
+++ b/index.html
@@ -9,18 +9,19 @@
 <body>
     <div class="container">
         <h1>Thuvien.seadrop Downloader</h1>
-        <input type="text" id="scribdUrl" placeholder="Please input URL here">
-        <button onclick="downloadFile()">Download</button>
+        <input type="text" id="scribdUrl" placeholder="Please input URL here" autocomplete="off">
+        <button id="downloadBtn">Download</button>
         <p id="status"></p>
+
+        <!-- Nút toggle hướng dẫn -->
+        <button id="toggleGuide">📖 Hướng dẫn sử dụng</button>
+        <div id="guideContent">
+            <p>🔹 Nhập URL có dạng: <br><b>thuvien.seadrop.info/#explorer&sidf=XXXX</b></p>
+            <p>🔹 Nhấn "Download" để tải file.</p>
+            <p>🔹 Nếu URL không hợp lệ, sẽ có thông báo lỗi.</p>
+        </div>
     </div>
-<button id="toggleGuide">📖 Hướng dẫn sử dụng</button>
-<div id="guideContent" style="display: none;">
-    <p>🔹 Nhập URL có dạng: <br><b>thuvien.seadrop.info/#explorer&sidf=XXXX</b></p>
-    <p>🔹 Nhấn "Download" để tải file.</p>
-    <p>🔹 Nếu URL không hợp lệ, sẽ có thông báo lỗi.</p>
-</div>
+
     <script src="script.js"></script>
-
-
 </body>
 </html>
