--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <button id="toggleGuide">📖 Hướng dẫn sử dụng</button>
         <div id="guideContent">
             <p>🔹 Yêu cầu: Đã đăng nhập vào thuvien.seadrop </b></p>
-            <p>🔹 Chọn file cần tải, bấm tổ hợp <br><b>Ctrl + Shift + C</b>X</b></p>
+            <p>🔹 Chọn file cần tải, bấm tổ hợp <br><b>Ctrl + Shift + C</b></b></p>
             <p>🔹 Paste URL có dạng: <br><b>thuvien.seadrop.info/#explorer&sidf=XXXX</b></p>
             <p>🔹 Nhấn "Download" để tải file.</p>
             <p>🔹 Nếu URL không hợp lệ, sẽ có thông báo lỗi.</p>
