--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>Thuvien.seadrop Downloader</h1>
+        <h1>Thuvien.seadrop downloader</h1>
         <input type="text" id="scribdUrl" placeholder="Please input URL here" autocomplete="off">
         <button id="downloadBtn">Download</button>
         <p id="status"></p>
@@ -17,7 +17,7 @@
         <button id="toggleGuide">📖 Hướng dẫn sử dụng</button>
         <div id="guideContent">
             <p>🔹 Yêu cầu: Đã đăng nhập vào thuvien.seadrop </b></p>
-            <p>🔹 Chọn file cần tải <br> (PC) bấm tổ hợp: <br><b>Ctrl + Shift + C</b></b> <br> (Khác) Thủ công </p>
+            <p>🔹 Chọn file cần tải <br> (PC) bấm tổ hợp: <b>Ctrl + Shift + C</b> <br> (Khác) Thủ công </p>
             <p>🔹 Paste URL có dạng: <br><b>thuvien.seadrop.info/#explorer&sidf=XXXX</b></p>
             <p>🔹 Nhấn "Download" để tải file.</p>
             <p>🔹 Nếu URL không hợp lệ, sẽ có thông báo lỗi.</p>
