--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <div class="container">
         <h1>Thuvien.seadrop downloader</h1>
-        <textarea id="scribdUrls" placeholder="Nhập mỗi URL trên một dòng" autocomplete="off"></textarea>
+        <textarea id="scribdUrl" placeholder="Nhập mỗi URL trên một dòng" autocomplete="off"></textarea>
         <button id="downloadBtn">Download</button>
         <p id="status"></p>
 
