--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <div class="container">
         <h1>Thuvien.seadrop downloader</h1>
-        <textarea id="scribdUrl" placeholder="Nhập mỗi URL trên một dòng" autocomplete="off"></textarea>
+        <textarea id="scribdUrl" placeholder="Nhập URL, Nhâp nhiều URL ngăn nhau bằng dấu ; " autocomplete="off"></textarea>
         <button id="downloadBtn">Download</button>
         <p id="status"></p>
 
@@ -18,7 +18,7 @@
         <div id="guideContent">
             <p>🔹 Yêu cầu: Đã đăng nhập vào <b>thuvien.seadrop</b></p>
             <p>🔹 Chọn file cần tải <br> (PC) Bấm tổ hợp: <b>Ctrl + Shift + C</b> <br> (Khác) Check thuộc tính thủ công </p>
-            <p>🔹 Paste mỗi URL trên một dòng, định dạng: <br><b>thuvien.seadrop.info/#explorer&sidf=XXXX</b></p>
+            <p>🔹 Paste mỗi URL trên một dòng, ngăn nhau bằng dấu ;, định dạng: <br><b>thuvien.seadrop.info/#explorer&sidf=XXXX</b></p>
             <p>🔹 Nhấn "Download" để tải file.</p>
             <p>🔹 Nếu URL không hợp lệ, sẽ có thông báo lỗi.</p>
         </div>
