--- a/index.html
+++ b/index.html
@@ -7,22 +7,24 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="container">
-        <h1>Thuvien.seadrop downloader</h1>
-        <textarea id="scribdUrl" placeholder="Nhập URL, Nhập nhiều URL ngăn nhau bằng dấu ; " autocomplete="off"></textarea>
-        <button id="downloadBtn">Download</button>
-        <p id="status"></p>
+<div class="container">
+    <h1>Thuvien.seadrop downloader</h1>
+    <textarea id="scribdUrl" placeholder="Nhập URL, Nhập nhiều URL ngăn nhau bằng dấu ;"></textarea>
+    <button id="downloadBtn">Download</button>
+    <p id="status"></p>
 
-        <!-- Nút toggle hướng dẫn -->
-        <button id="toggleGuide">📖 Hướng dẫn sử dụng</button>
-        <div id="guideContent">
-            <p>🔹 Yêu cầu: Đã đăng nhập vào <b>thuvien.seadrop</b></p>
-            <p>🔹 Chọn file cần tải <br> (PC) Bấm tổ hợp: <b>Ctrl + Shift + C</b> <br> (Khác) Check thuộc tính thủ công </p>
-            <p>🔹 Paste mỗi URL trên một dòng, ngăn nhau bằng dấu <b>;</b> định dạng: <br><b>thuvien.seadrop.info/#explorer&sidf=XXXX</b></p>
-            <p>🔹 Nhấn "Download" để tải file.</p>
-            <p>🔹 Nếu URL không hợp lệ, sẽ có thông báo lỗi.</p>
-        </div>
+    <button id="toggleGuide">📘 Hướng dẫn sử dụng</button>
+    <div id="guideContent">
+        <p>🔹 <b>Yêu cầu:</b> Đã đăng nhập vào <b>thuvien.seadrop</b></p>
+        <p>🔹 <b>Chọn file cần tải:</b></p>
+        <p>&emsp;🖥 (PC) Bấm tổ hợp: <b>Ctrl + Shift + C</b></p>
+        <p>&emsp;📱 (Khác) Check thuộc tính thủ công</p>
+        <p>🔹 <b>Nhập danh sách URL:</b> Ngăn nhau bằng dấu <b>;</b></p>
+        <p>&emsp;<b>Định dạng:</b> thuvien.seadrop.info/#explorer&sidf=XXXX</p>
+        <p>🔹 Nhấn <b>"Download"</b> để tải file.</p>
+        <p>🔹 Nếu URL không hợp lệ, sẽ có thông báo lỗi.</p>
     </div>
+</div>
     <script src="script.js"></script>
 </body>
 </html>
