--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <p>&emsp;🖥 (PC) Bấm tổ hợp: <b>Ctrl + Shift + C</b></p>
         <p>&emsp;📱 (Khác) Check thuộc tính thủ công</p>
         <p>🔹 <b>Nhập danh sách URL:</b> Ngăn nhau bằng dấu <b>;</b></p>
-        <p>&emsp;<b>Định dạng:</b> thuvien.seadrop.info/#explorer&sidf=XXXX</p>
+        <p>&emsp;Định dạng: <b>thuvien.seadrop.info/#explorer&sidf=XXXX</b></p>
         <p>🔹 Nhấn <b>"Download"</b> để tải file.</p>
         <p>🔹 Nếu URL không hợp lệ, sẽ có thông báo lỗi.</p>
     </div>
