--- a/index.html
+++ b/index.html
@@ -27,4 +27,7 @@
 </div>
     <script src="script.js"></script>
 </body>
+    <footer id="signature">
+    Được phát triển bởi <b>des headLess</b> 🚀
+</footer>
 </html>
